# dash-manager

./: .gitignore  README.md
Frontend/Dash-Manager/Pages/: pg-alertas.html  pg-inicial.html  pg-processos.html  pg-recursos.html  pg-usuarios.html
Frontend/Dash-Manager/Scripts/: pg-alertas.js  pg-inicial.js  pg-processos.js  pg-recursos.js  pg-usuarios.js
Frontend/Dash-Manager/Styles/: pg-alertas.css  pg-inicial.css  pg-processos.css  pg-recursos.css  pg-usuarios.css
Frontend/Exemplo do Tanizaka/json/: dados.json
Frontend/Exemplo do Tanizaka/pages/: index.html
Frontend/Exemplo do Tanizaka/script/: script.js
Frontend/Exemplo do Tanizaka/styles/: style.css
Frontend/Raiz-Urbana-Mercado/Pages/: compras.html  index.html
Frontend/Raiz-Urbana-Mercado/Scripts/: script.js
backend/: dados.json  extracao.c  monitor
backend/api/: pyproject.toml  server.py
frontend/: README.md  Sobrenos.html  style.css
frontend/Raiz Urbana Mercado/: Detalhes.txt
frontend/Raiz Urbana Mercado/Scripts/: script.js
frontend/Raiz Urbana Mercado/Styles/: style.css
frontend/dash_manager/Pages/: pg-alertas.html
frontend/dash_manager/pages/: pg_alertas.html  pg_inicial.html
frontend/dash_manager/scripts/: pg_alertas.js
frontend/dash_manager/styles/: pg_inicial.css
