[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Gustavo Brito <britogustaff@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = "^0.136.1"
uvicorn = "^0.46.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"